# bat

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml
assets/: create.sh  guesslang.onnx  guesslang.ort  guesslang_mapping.json  guesslang_mapping.ron  ignored_suffixes.plist  syntax_mapping.plist  syntax_mapping.ron
assets/patches/: Elixir.sublime-syntax.patch  SLS.sublime-syntax.patch  Sass.sublime-syntax.patch  VimHelp.sublime-syntax.patch  cmd-help.sublime-syntax.patch
assets/syntaxes/02_Extra/: LiveScript.sublime-syntax  VimHelp.sublime-syntax
nu-ansi-term/: Cargo.toml
nu-ansi-term/src/: ansi.rs  lib.rs  rgb.rs  style.rs  windows.rs
src/: assets.rs  config.rs  controller.rs  diff.rs  error.rs  guesslang.rs  input.rs  less.rs  lib.rs  line_range.rs  output.rs  pager.rs  paging.rs  preprocessor.rs  pretty_printer.rs  printer.rs  style.rs  syntax_mapping.rs  wrapping.rs  zero_copy.rs
src/assets/: build_assets.rs  guesslang.rs  lazy_theme_set.rs  mod.rs  syntax_mapping.rs
src/assets/build_assets/: acknowledgements.rs
src/config/: leak_table.rs  mod.rs
src/controller/: diff.rs  lessopen.rs  line_range.rs  mod.rs
src/error/: mod.rs
src/input/: lessopen.rs  mod.rs  zero_copy.rs
src/output/: less.rs  mod.rs  pager.rs
src/printer/: decorations.rs  mod.rs  preprocessor.rs  style.rs  terminal.rs  vscreen.rs
tests/: assets.rs  integration_tests.rs  no_duplicate_extensions.rs  snapshot_tests.rs  test_pretty_printer.rs
tests/examples/: bat-tabs.conf  bat-theme.conf  bat-windows.conf  bat.conf
tests/tester/: mod.rs
zwrite/: Cargo.toml
zwrite/src/: lib.rs
