[package]
authors = ["David Peter <mail@david-peter.de>"]
categories = ["command-line-utilities"]
description = "A cat(1) clone with wings."
homepage = "https://github.com/sharkdp/bat"
license = "MIT OR Apache-2.0"
name = "bat"
repository = "https://github.com/sharkdp/bat"
version = "0.23.0"
exclude = ["assets/syntaxes/*", "assets/themes/*"]
build = "build.rs"
edition = '2021'
rust-version = "1.70"

[features]
default = ["application"]
# Feature required for bat the application. Should be disabled when depending on
# bat as a library.
application = [
    "bugreport",
    "git",
    "minimal-application",
    "guesslang",
]
# Mainly for developers that want to iterate quickly
# Be aware that the included features might change in the future
minimal-application = [
    "clap",
    "etcetera",
    "paging",
    "wild",
]
git = ["git2"] # Support indicating git modifications
paging = ["shell-words", "grep-cli"] # Support applying a pager on the output
lessopen = ["run_script", "os_str_bytes"] # Support $LESSOPEN preprocessor
build-assets = ["syntect/yaml-load", "syntect/plist-load", "regex", "walkdir"]

guesslang = ["ort", "ndarray"]

[dependencies]
nu-ansi-term = "0.49.0"
ansi_colours = "^1.2"
bincode = "1.0"
console = "0.15.5"
once_cell = "1.18"
thiserror = "1.0"
wild = { version = "2.1", optional = true }
content_inspector = "0.2.4"
shell-words = { version = "1.1.0", optional = true }
unicode-width = "0.1.10"
globset = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
semver = "1.0"
path_abs = { version = "0.5", default-features = false }
clircle = "0.4"
etcetera = { version = "0.8.0", optional = true }
grep-cli = { version = "0.1.9", optional = true }
regex = { version = "1.8.3", optional = true }
walkdir = { version = "2.3", optional = true }
bytesize = "1.3.0"
os_str_bytes = { version = "6.4", optional = true }
run_script = { version = "0.10.0", optional = true }
ndarray = { version = "0.15.0", optional = true }

[dependencies.git2]
version = "0.18"
optional = true
default-features = false

[dependencies.syntect]
git = "https://github.com/ruihe774/syntect.git"
branch = "msk"
default-features = false
features = ["parsing", "regex-onig"]

[dependencies.clap]
version = "4.4.6"
optional = true
features = ["wrap_help", "cargo"]

[dependencies.ort]
git = "https://github.com/ruihe774/ort.git"
branch = "msk"
optional = true
default-features = false

[dependencies.bugreport]
version = "0.5.0"
optional = true
features = ["format_plaintext"]

[target.'cfg(unix)'.dependencies.flate2]
version = "1.0"
default-features = false
features = ["zlib"]

[target.'cfg(not(unix))'.dependencies]
flate2 = "1.0"

[dev-dependencies]
assert_cmd = "2.0.10"
expect-test = "1.4.1"
serial_test = { version = "2.0.0", default-features = false }
predicates = "3.0.3"
wait-timeout = "0.2.0"
tempfile = "3.8.0"
crc32fast = "1.3.2"

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.26.2", default-features = false, features = ["term"] }

[build-dependencies.clap]
version = "4.4.6"
optional = true
features = ["wrap_help", "cargo"]

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
