[package]
authors = ["David Peter <mail@david-peter.de>"]
categories = ["command-line-utilities"]
description = "A cat(1) clone with wings."
homepage = "https://github.com/sharkdp/bat"
license = "MIT OR Apache-2.0"
name = "bat"
repository = "https://github.com/sharkdp/bat"
version = "0.23.0+msk"
exclude = ["assets/syntaxes/*", "assets/themes/*"]
edition = '2021'
rust-version = "1.70"

[features]
default = ["application"]

# Feature required for bat the application. Should be disabled when depending on
# bat as a library.
application = [
    "bugreport",
    "guesslang",
    "zero-copy",
    "minimal-application",
]

# Mainly for developers that want to iterate quickly
# Be aware that the included features might change in the future
minimal-application = [
    "clap",
    "etcetera",
    "paging",
    "wild",
]

# Support indicating git modifications
git = [
    "git2",
]

# Support applying a pager on the output
paging = [
    "shell-words",
    "grep-cli",
]

# Support $LESSOPEN preprocessor
lessopen = [
    "run_script",
]

# Support guesslang
guesslang = [
    "ort",
    "ndarray",
]

# Support zero-copy IO
zero-copy = [
    "memmap2",
    "libmimalloc-sys"
]

# Support assets building
build-assets = [
    "syntect/yaml-load",
    "syntect/plist-load",
    "regex",
    "walkdir",
]

[dependencies]
aho-corasick = "1.1"
ansi_colours = "1.2"
bincode = "1.0"
bstr = "1.7"
clircle = "0.4"
console = "0.15"
globset = "0.4"
nu-ansi-term = "0.49"
once_cell = "1.18"
page_size = "0.6"
serde_bytes = "0.11"
unicode-width = "0.1"

[dependencies.anyhow]
version = "1.0"
features = ["backtrace"]

[dependencies.os_str_bytes]
version = "6.6"
features = ["conversions"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.etcetera]
version = "0.8"
optional = true

[dependencies.grep-cli]
version = "0.1"
optional = true

[dependencies.memmap2]
version = "0.9"
optional = true

[dependencies.ndarray]
version = "0.15"
optional = true

[dependencies.regex]
version = "1.8"
optional = true

[dependencies.run_script]
version = "0.10"
optional = true

[dependencies.shell-words]
version = "1.1"
optional = true

[dependencies.walkdir]
version = "2.3"
optional = true

[dependencies.wild]
version = "2.1"
optional = true

[dependencies.bugreport]
version = "0.5"
optional = true
features = ["format_plaintext"]

[dependencies.clap]
version = "4.4"
optional = true
features = ["wrap_help", "cargo"]

[dependencies.libmimalloc-sys]
version = "0.1"
optional = true
features = ["extended"]

[dependencies.git2]
version = "0.18"
optional = true
default-features = false

[dependencies.syntect]
git = "https://github.com/ruihe774/syntect.git"
branch = "msk"
default-features = false
features = ["parsing", "regex-fancy"]

[dependencies.ort]
git = "https://github.com/ruihe774/ort.git"
branch = "msk"
optional = true
default-features = false

[patch.crates-io.fancy-regex]
git = "https://github.com/ruihe774/fancy-regex.git"
branch = "relative-backref"

[target.'cfg(unix)'.dependencies.flate2]
version = "1.0"
default-features = false
features = ["zlib"]

[target.'cfg(not(unix))'.dependencies]
flate2 = "1.0"
content_inspector = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
expect-test = "1.4"
predicates = "3.0"
serial_test = "2.0"
tempfile = "3.8"
wait-timeout = "0.2"

[target.'cfg(unix)'.dev-dependencies.nix]
version = "0.26"
default-features = false
features = ["term"]

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
