[package]
authors = [
    "David Peter <mail@david-peter.de>",
    "Misaki Kasumi <misakikasumi@outlook.com>",
]
categories = ["command-line-utilities"]
description = "A cat(1) clone with wings. MSK mod."
homepage = "https://github.com/sharkdp/bat"
license = "MIT OR Apache-2.0"
name = "bat"
repository = "https://github.com/sharkdp/bat"
version = "0.23.0+msk"
exclude = ["assets/syntaxes/*", "assets/themes/*"]
edition = '2021'
rust-version = "1.72"

[features]
default = ["application"]

# Feature required for bat the application. Should be disabled when depending on
# bat as a library.
application = [
    "bugreport",
    "guesslang",
    "lessopen",
    "mimalloc",
    "zero-copy",
    "minimal-application",
]

# Mainly for developers that want to iterate quickly
# Be aware that the included features might change in the future
minimal-application = [
    "clap",
    "etcetera",
    "paging",
    "ron",
    "wild",
]

# Support bugreport
bugreport = [
    "dep:bugreport",
]

# Support applying a pager on the output
paging = [
    "shell-words",
    "grep-cli",
]

# Support $LESSOPEN preprocessor
lessopen = [
    "shell-words",
    "grep-cli",
]

# Support guesslang
guesslang = [
    "ort",
    "ndarray",
]

# Support onnxruntime build with mimalloc
mimalloc = [
    "ort/mimalloc",
]

# Support zero-copy IO
zero-copy = [
    "memmap2",
    "libmimalloc-sys"
]

# Support assets building
build-assets = [
    "syntect/yaml-load",
    "syntect/plist-load",
    "regex",
    "walkdir",
]

[dependencies]
aho-corasick = "1.1"
anyhow = "1.0"
ansi_colours = "1.2"
bincode = "1.0"
bstr = "1.7"
bytesize = "1.3"
clircle = "0.4"
console = "0.15"
flate2 = "1.0"
globset = "0.4"
once_cell = "1.18"
serde_bytes = "0.11"
unicode-width = "0.1"

[dependencies.os_str_bytes]
version = "6.6"
features = ["conversions"]

[dependencies.compact_str]
version = "0.7"
features = ["smallvec", "serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.etcetera]
version = "0.8"
optional = true

[dependencies.grep-cli]
version = "0.1"
optional = true

[dependencies.memmap2]
version = "0.9"
optional = true

[dependencies.ndarray]
version = "0.15"
optional = true

[dependencies.regex]
version = "1.8"
optional = true

[dependencies.ron]
version = "0.8"
optional = true

[dependencies.shell-words]
version = "1.1"
optional = true

[dependencies.walkdir]
version = "2.3"
optional = true

[dependencies.wild]
version = "2.1"
optional = true

[dependencies.bugreport]
version = "0.5"
optional = true
default-features = false
features = [
    "collector_operating_system",
    "git_hash",
    "format_plaintext"
]

[dependencies.clap]
version = "4.4"
optional = true
default-features = false
features = [
    "std",
    "help",
    "usage",
    "error-context",
    "suggestions",
    "wrap_help",
    "cargo"
]

[dependencies.libmimalloc-sys]
version = "0.1"
optional = true
features = ["extended"]

[dependencies.nu-ansi-term]
path = "nu-ansi-term"

[dependencies.zwrite]
path = "zwrite"

[dependencies.syntect]
git = "https://github.com/ruihe774/syntect.git"
branch = "msk"
default-features = false
features = ["parsing", "regex-fancy"]

[dependencies.ort]
git = "https://github.com/ruihe774/ort.git"
branch = "msk"
optional = true
default-features = false

[patch.crates-io.fancy-regex]
git = "https://github.com/ruihe774/fancy-regex.git"
branch = "relative-backref"

[target.'cfg(not(unix))'.dependencies]
content_inspector = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
expect-test = "1.4"
predicates = "3.0"
serial_test = "2.0"
tempfile = "3.8"
wait-timeout = "0.2"

[target.'cfg(unix)'.dev-dependencies.nix]
version = "0.26"
default-features = false
features = ["term"]

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "debuginfo"

[workspace]
